# librealsense

./: package.xml
CMake/: global_config.cmake
doc/: distribution_linux.md
examples/: CMakeLists.txt
examples/multicam/: rs-multicam.cpp
include/: CMakeLists.txt
include/librealsense2/: rs.hpp  rsutil.h
include/librealsense2/h/: rs_context.h  rs_processing.h  rs_types.h  rs_utils.h
include/librealsense2/hpp/: rs_context.hpp  rs_processing.hpp  rs_utils.hpp
src/: CMakeLists.txt  command_transfer.h  context.cpp  context.h  hw-monitor.h  option.cpp  option.h  realsense.def  rs.cpp  types.cpp
src/android/jni/: processing.cpp
src/core/: roi.h
src/l500/: l500-depth.cpp
src/linux/: backend-v4l2.cpp  backend-v4l2.h
src/media/ros/: ros_reader.cpp  ros_writer.cpp
src/proc/: CMakeLists.txt  canny.cpp  canny.h  depth-smear.cpp  depth-smear.h
src/utils/: depth-color-auto-calibrator.cpp  depth-color-auto-calibrator.h  simplex.h
tools/: CMakeLists.txt
tools/depth_color_auto_calibrate/: CMakeLists.txt  depth-color-auto-calibrator.cpp  depth-color-auto-calibrator.h  rs-depth-color-auto-calibrate.cpp  simplex.h
tools/rs-calibration/: rs-calibration.py
unit-tests/: unit-tests-common.h  unit-tests-live.cpp  unit-tests-regressions.cpp
unit-tests/func/rec-play/: test-got-playback-frames.py
unit-tests/internal/: CMakeLists.txt  internal-tests-processing-block.cpp
wrappers/csharp/Intel.RealSense/: NativeMethods.cs
wrappers/nodejs/: README.md
wrappers/nodejs/test/: README.md
wrappers/python/: pyrsutil.cpp  python.cpp
(+4 files in other folders)
